--- a/PGD-DS-AI-2024/PGD_PYTHON/ASSIGNMENT_Practice for Tuple.ipynb
+++ b/PGD-DS-AI-2024/PGD_PYTHON/ASSIGNMENT_Practice for Tuple.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Practice for Tuple\n",
-    "    ## Exercises: Level 1\n",
+    "    Exercises: Level 1\n",
     "      Create an empty tuple\n",
     "      Create a tuple containing names of your sisters and your brothers (imaginary siblings are fine)\n",
     "      Join brothers and sisters tuples and assign it to siblings\n",
     "      How many siblings do you have?\n",
     "      Modify the siblings tuple and add the name of your father and mother and assign it to family_members\n",
-    "    ## Exercises: Level 2\n",
+    "    Exercises: Level 2\n",
     "      Unpack siblings and parents from family_members\n",
     "      Create fruits, vegetables and animal products tuples. Join the three tuples and assign it to a variable called food_stuff_tp.\n",
     "      Change the about food_stuff_tp tuple to a food_stuff_lt list\n",
@@ -19,8 +19,8 @@
     "      Slice out the first three items and the last three items from food_staff_lt list\n",
     "      Delete the food_staff_tp tuple completely\n",
     "      Check if an item exists in tuple:\n",
-    "  ## Check if 'Estonia' is a nordic country\n",
-    "  ## Check if 'Iceland' is a nordic country"
+    "  Check if 'Estonia' is a nordic country\n",
+    "  Check if 'Iceland' is a nordic country"
    ]
   },
   {
