markdown fix practice list

--- a/PGD-DS-AI-2024/PGD_PYTHON/ASSIGNMENT_practice List.ipynb
+++ b/PGD-DS-AI-2024/PGD_PYTHON/ASSIGNMENT_practice List.ipynb
@@ -13,7 +13,9 @@
     "  ## Find the average age (sum of all items divided by their number )\n",
     "  ## Find the range of the ages (max minus min)\n",
     "  ## Compare the value of (min - average) and (max - average), use  method\n",
-    "## Find the middle country(ies) in the countries listDivide the countries list into two equal lists if it is even if not one more country for the first half.['China', 'Russia', 'USA', 'Finland', 'Sweden', 'Norway', 'Denmark']. Unpack the first three countries and the rest as scandic countries."
+    "## Find the middle country(ies) in the countries list\n",
+    "  ## Divide the countries list into two equal lists if it is even if not one more country for the first half.['China', 'Russia', 'USA', 'Finland', 'Sweden', 'Norway', 'Denmark'].\n",
+    "  ## Unpack the first three countries and the rest as scandic countries."
    ]
   },
   {
