mardown fix practice list 2

--- a/PGD-DS-AI-2024/PGD_PYTHON/ASSIGNMENT_practice List.ipynb
+++ b/PGD-DS-AI-2024/PGD_PYTHON/ASSIGNMENT_practice List.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# practice List\n",
-    "# Exercises: Level 1The following is a list of 10 students ages:\n",
+    "# Exercises: Level 1\n",
+    "  ## The following is a list of 10 students ages:\n",
     "  ## ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]\n",
     "  ## Sort the list and find the min and max age\n",
     "  ## Add the min age and the max age again to the list\n",
