final exam for pgd DS AI markdowns modified

--- a/PGD-DS-AI-2024/PGD_PYTHON/Final Examination.ipynb
+++ b/PGD-DS-AI-2024/PGD_PYTHON/Final Examination.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Examination\n",
-    "# Name: Uzair Ahmed\n",
-    "# Email: uzairahmedwyne@hotmail.com\n",
-    "# Class: PGD - DSAI - B - VII\n",
-    "# Module: Python For DS\n",
-    "# Phone: +92 344 2491144"
+    "## Final Examination\n",
+    "## Name: Uzair Ahmed\n",
+    "## Email: uzairahmedwyne@hotmail.com\n",
+    "## Class: PGD - DSAI - B - VII\n",
+    "## Module: Python For DS\n",
+    "## Phone: +92 344 2491144"
    ]
   },
   {
@@ -18,10 +18,10 @@
    "source": [
     "Question 1: Lists (6 Marks)\n",
     "  1. Given the list numbers = [10, 20, 30, 40, 50], write a Python code snippet to:\n",
-    "   Append the number 60 to the list.\n",
-    "   Remove the number 20 from the list.\n",
-    "   Insert 80 at index 2.\n",
-    "   Print the sum of all the elements in the list."
+    "      - Append the number 60 to the list.\n",
+    "      - Remove the number 20 from the list.\n",
+    "      - Insert 80 at index 2.\n",
+    "      - Print the sum of all the elements in the list."
    ]
   },
   {
@@ -54,10 +54,10 @@
    "metadata": {},
    "source": [
     "Question 2: Tuples (6 Marks)\n",
+    "\n",
     "  2. Consider the tuple coordinates = (12.5, 45.8, 33.1).\n",
-    "   Write a Python code snippet to unpack the values of the tuple into three variables: `x`,\n",
-    "  `y`, and `z`.\n",
-    "   Explain why tuples are generally preferred over lists for storing fixed sets of data."
+    "      - Write a Python code snippet to unpack the values of the tuple into three variables: `x`, `y`, and `z`.\n",
+    "      - Explain why tuples are generally preferred over lists for storing fixed sets of data."
    ]
   },
   {
@@ -85,8 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Explain why tuples are generally preferred over lists for storing fixed sets of data\n",
-    "  Answer: This is because of the immutable nature of tuples which makes them best suited to store fixed set of data, so that even if some piece of code tries to\n",
+    "- Question: Explain why tuples are generally preferred over lists for storing fixed sets of data\n",
+    "    - Answer: This is because of the immutable nature of tuples which makes them best suited to store fixed set of data, so that even if some piece of code tries to\n",
     "  update it, it returns error which we can handle"
    ]
   },
@@ -95,10 +95,11 @@
    "metadata": {},
    "source": [
     "Question 3: Dictionaries (6 Marks)\n",
+    "\n",
     "  3. Given the dictionary `student_scores = {Faraz: 85, Raza: 90, Ishaq: 78}`:\n",
-    "   Write a Python code snippet to add a new student `David` with a score of 92.\n",
-    "   Update Raza's score to 82.\n",
-    "   Write a code snippet to print all student names and their scores in the format: `Name: Score`."
+    "      - Write a Python code snippet to add a new student `David` with a score of 92.\n",
+    "      - Update Raza's score to 82.\n",
+    "      - Write a code snippet to print all student names and their scores in the format: `Name: Score`."
    ]
   },
   {
@@ -140,6 +141,7 @@
    "metadata": {},
    "source": [
     "Question 4: User-defined Functions (6 Marks)\n",
+    "\n",
     "  4. Write a Python function called `calculate_mean` that takes a list of numbers as input and\n",
     "  returns the mean (average) of the numbers."
    ]
@@ -169,6 +171,7 @@
    "metadata": {},
    "source": [
     "Question 5: Lists and Dictionaries (8 Marks)\n",
+    "\n",
     "  5. Write a Python function called `grade_students` that takes a dictionary of student names and\n",
     "  their scores, and returns a new dictionary with student names and their corresponding grades (A,\n",
     "  B, C, D, F). Use the following grading scale:\n",
@@ -223,12 +226,11 @@
    "metadata": {},
    "source": [
     "Question 6: Basic Pandas Functions (4 Marks)\n",
-    "  6. Given a CSV file named `data.csv` with columns `Name`, `Age`, and `Salary`, write a Python\n",
-    "  code snippet using pandas to:\n",
-    "   Load the CSV file into a DataFrame.\n",
-    "   Display the first and last 5 rows of the DataFrame.\n",
-    "   Print the mean salary and see if any missing values present visualize the missing values if\n",
-    "  there."
+    "\n",
+    "  6. Given a CSV file named `data.csv` with columns `Name`, `Age`, and `Salary`, write a Python code snippet using pandas to:\n",
+    "  - Load the CSV file into a DataFrame.\n",
+    "  - Display the first and last 5 rows of the DataFrame.\n",
+    "  - Print the mean salary and see if any missing values present visualize the missing values if there."
    ]
   },
   {
@@ -303,9 +305,9 @@
    "metadata": {},
    "source": [
     "Question 7: Pandas EDA - Summary Statistics (6 Marks)\n",
+    "\n",
     "  7. Using the DataFrame from Question 6, write a Python code snippet to:\n",
-    "   Calculate and print summary statistics for the `Age` column (mean, median, standard\n",
-    "  deviation)."
+    "  - Calculate and print summary statistics for the `Age` column (mean, median, standard deviation)."
    ]
   },
   {
@@ -336,8 +338,9 @@
    "metadata": {},
    "source": [
     "Question 8: Pandas EDA - Filtering Data (6 Marks)\n",
+    "\n",
     "  8. Using the same DataFrame, write a Python code snippet to:\n",
-    "   Filter and print the records of employees who are older than 30 years."
+    "  - Filter and print the records of employees who are older than 30 years."
    ]
   },
   {
@@ -429,9 +432,10 @@
    "metadata": {},
    "source": [
     "Question 9: Pandas EDA - Grouping Data (6 Marks)\n",
+    "\n",
     "  9. Using the same DataFrame, write a Python code snippet to:\n",
-    "   Group the data by `Age` and calculate the mean salary for each age group.\n",
-    "   Print the result."
+    "  - Group the data by `Age` and calculate the mean salary for each age group.\n",
+    "  - Print the result."
    ]
   },
   {
@@ -468,10 +472,11 @@
    "metadata": {},
    "source": [
     "Question 10: User-defined Function and Pandas Integration (6 Marks)\n",
+    "\n",
     "  10. Write a Python function called `load_and_describe_csv` that:\n",
-    "   Takes the filename of a CSV file as input.\n",
-    "   Loads the CSV file into a pandas DataFrame.\n",
-    "   Returns the DataFrame and its summary statistics."
+    "  - Takes the filename of a CSV file as input.\n",
+    "  - Loads the CSV file into a pandas DataFrame.\n",
+    "  - Returns the DataFrame and its summary statistics."
    ]
   },
   {
