--- a/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/notebooks/whatsapp.ipynb
+++ b/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/notebooks/whatsapp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "90df8743-0620-49f5-bdf1-c6f131fb7de5",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,10 @@
     "with open(\"./QfYLlL.txt\", encoding='utf-8') as file:\n",
     "    data = file.read()\n",
     "\n",
-    "print(data)"
+    "print(data)\n",
+    "# import os\n",
+    "# print(os.getcwd())\n",
+    "# print(os.listdir('.'))"
    ]
   },
   {
@@ -1602,7 +1605,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
