peakflo local testing seperated

--- a/peakflo-local-testing-sandbox/firestore-testing.ipynb
+++ b/peakflo-local-testing-sandbox/firestore-testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1726742259.991108\n"
+      "1727856238.202165\n"
      ]
     }
    ],
@@ -37,26 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the environment variable to use the local Firestore emulator\n",
-    "os.environ[\"FIRESTORE_EMULATOR_HOST\"] = \"host.docker.internal:8081\""
+    "os.environ[\"FIRESTORE_EMULATOR_HOST\"] = \"localhost:8081\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<firebase_admin.App at 0x7f10095f2190>"
+       "<firebase_admin.App at 0x17bc54e6e40>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,20 +225,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_sample_er(bill_number):\n",
+    "    \"\"\"Generate a sample ER with the given bill number.\"\"\"\n",
+    "    return {\n",
+    "        \"action\": \"create\",\n",
+    "        \"billId\": str(uuid.uuid4()),\n",
+    "        \"vendorId\": \"RWjytpWAX0j9Gejk3Zxm\",\n",
+    "        \"vendorName\": \"Uzair Ahmed\",\n",
+    "        \"vendorAccountNumber\": f\"ACC-{random.randint(10000, 99999)}\",\n",
+    "        \"billStatus\": random.choice([\"draft\", \"scheduled\", \"paid\"]),\n",
+    "        \"billNumber\": bill_number,\n",
+    "        \"lineItems\": [\n",
+    "            {\n",
+    "                \"expenseCategorySourceId\": \"1\",\n",
+    "                \"name\": f\"Item {i}\",\n",
+    "                \"quantity\": random.randint(1, 10),\n",
+    "                \"unitPrice\": round(random.uniform(10, 1000), 2),\n",
+    "                \"type\": \"expense\",\n",
+    "                \"wht\": {\n",
+    "                    \"referenceId\": f\"WHT-{random.randint(1000, 9999)}\",\n",
+    "                    \"code\": \"1A\",\n",
+    "                    \"displayName\": \"WC110\",\n",
+    "                    # \"perc\": random.randint(1, 10)\n",
+    "                    \"perc\": 11\n",
+    "                }\n",
+    "            } for i in range(random.randint(1, 5))\n",
+    "        ],\n",
+    "        \"total\": 0,  # We'll calculate this based on line items\n",
+    "        \"subTotal\": 0,  # We'll calculate this based on line items\n",
+    "        \"paymentAmount\": 0,  # We'll calculate this based on total\n",
+    "        \"date\": (datetime.now() - timedelta(days=random.randint(0, 30))).strftime(\"%Y-%m-%d\"),\n",
+    "        \"dueDate\": (datetime.now() + timedelta(days=random.randint(1, 30))).strftime(\"%Y-%m-%d\"),\n",
+    "        \"currency\": 'SGD',\n",
+    "        \"billCurrency\": 'SGD',\n",
+    "        \"currencyRate\": round(random.uniform(0.8, 1.2), 4),\n",
+    "        \"isVendorSynced\": True,\n",
+    "        \"peakfloId\": f\"PF-{random.randint(10000, 99999)}\",\n",
+    "        \"billCreatedAt\": datetime.now().isoformat(),\n",
+    "        \"type\": \"EXPENSE_REPORT\",\n",
+    "        \"status\": \"ready\",\n",
+    "        \"customerId\": \"demo1Company\",\n",
+    "        \"updatedAt\": firestore.SERVER_TIMESTAMP\n",
+    "    }\n",
+    "\n",
+    "def calculate_er_totals(bill):\n",
+    "    \"\"\"Calculate totals for the ER based on line items.\"\"\"\n",
+    "    sub_total = 0\n",
+    "    total_wht = 0\n",
+    "    \n",
+    "    for item in bill[\"lineItems\"]:\n",
+    "        quantity = item[\"quantity\"]\n",
+    "        unit_price = item[\"unitPrice\"]\n",
+    "        item_amount = round(quantity * unit_price, 2)\n",
+    "        item[\"amount\"] = item_amount\n",
+    "        sub_total += item_amount\n",
+    "        \n",
+    "        if \"wht\" in item:\n",
+    "            wht_perc = item[\"wht\"][\"perc\"]\n",
+    "            wht_amount = round(item_amount * (wht_perc / 100), 2)\n",
+    "            item[\"wht\"][\"amount\"] = wht_amount\n",
+    "            total_wht += wht_amount\n",
+    "    \n",
+    "    bill[\"subTotal\"] = round(sub_total, 2)\n",
+    "    bill[\"totalWHT\"] = round(total_wht, 2)\n",
+    "    bill[\"total\"] = round(sub_total - total_wht, 2)\n",
+    "    bill[\"paymentAmount\"] = bill[\"total\"]\n",
+    "\n",
+    "def insert_er_to_firestore(num_bills=10):\n",
+    "    \"\"\"Insert the specified number of ERs into Firestore.\"\"\"\n",
+    "    collection_ref = db.collection(\"netsuite-bill-outgoing-updates\")\n",
+    "    \n",
+    "    for i in range(1, num_bills + 1):\n",
+    "        bill_number = f\"ER-{time.time()}-{i:03d}\"\n",
+    "        bill = generate_sample_er(bill_number)\n",
+    "        calculate_er_totals(bill)\n",
+    "        \n",
+    "        # add bill\n",
+    "        collection_ref.add(bill)\n",
+    "        \n",
+    "        print(f\"Inserted ER with number: {bill_number}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted bill with number: BILL-1726743713.0499072-001\n",
-      "Inserted bill with number: BILL-1726743713.527992-002\n"
+      "Inserted ER with number: ER-1727960877.5815334-001\n"
      ]
     }
    ],
    "source": [
-    "insert_bills_to_firestore(2)"
+    "# insert_bills_to_firestore(1)\n",
+    "insert_er_to_firestore(1)"
    ]
   },
   {
@@ -826,6 +913,109 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(DatetimeWithNanoseconds(2024, 10, 2, 9, 44, 57, 787481, tzinfo=datetime.timezone.utc),\n",
+       " <google.cloud.firestore_v1.document.DocumentReference at 0x17bc58ea4b0>)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection_ref = db.collection(\"userManagement\")\n",
+    "\n",
+    "collection_ref.add({\n",
+    "    \"actionType\": \"create\",\n",
+    "    \"userData\": {\n",
+    "      \"phone\": \"\",\n",
+    "      \"defaultAM\": False,\n",
+    "      \"companiesId\": [\n",
+    "        \"demo2Company\"\n",
+    "      ],\n",
+    "      \"tenantId\": \"demo2Company\",\n",
+    "      \"companies\": [\n",
+    "        {\n",
+    "          \"name\": \"Demo 2 Company\",\n",
+    "          \"id\": \"demo2Company\"\n",
+    "        }\n",
+    "      ],\n",
+    "      \"companyId\": \"demo2Company\",\n",
+    "      \"email\": \"test.testing@testing1.ggn\",\n",
+    "      \"displayName\": \"Đinh Phạm Thảo Nguyên\",\n",
+    "      \"role\": \"demo2AM\",\n",
+    "      \"active\": True,\n",
+    "      \"createdBy\": \"\",\n",
+    "      \"skipModal\": True\n",
+    "    },\n",
+    "    \"createdBy\": \"\",\n",
+    "    \"createdAt\": firestore.SERVER_TIMESTAMP,\n",
+    "    \"status\": \"created\"\n",
+    "  })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(DatetimeWithNanoseconds(2024, 10, 2, 9, 46, 30, 414887, tzinfo=datetime.timezone.utc),\n",
+       " <google.cloud.firestore_v1.document.DocumentReference at 0x17bb3ee1a30>)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection_ref.add({\n",
+    "    \"actionType\": \"update\",\n",
+    "    \"userData\": {\n",
+    "      \"phone\": \"+9820974097103\",\n",
+    "      \"defaultAM\": False,\n",
+    "      \"companiesId\": [\n",
+    "        \"demo2Company\"\n",
+    "      ],\n",
+    "      \"tenantId\": \"demo2Company\",\n",
+    "      \"companies\": [\n",
+    "        {\n",
+    "          \"name\": \"Demo 2 Company\",\n",
+    "          \"id\": \"demo2Company\"\n",
+    "        }\n",
+    "      ],\n",
+    "      \"companyId\": \"demo2Company\",\n",
+    "      \"email\": \"test.testing@testing1.ggn\",\n",
+    "      \"displayName\": \"Đinh Phạm Thảo Nguyên\",\n",
+    "      \"role\": \"demo2AM\",\n",
+    "      \"active\": True,\n",
+    "      \"createdBy\": \"BUO9WuifMYc7RB5CIuAURHivv5zS\",\n",
+    "      \"skipModal\": True\n",
+    "    },\n",
+    "    \"createdBy\": \"BUO9WuifMYc7RB5CIuAURHivv5zS\",\n",
+    "    \"createdAt\": firestore.SERVER_TIMESTAMP,\n",
+    "    \"status\": \"created\"\n",
+    "  })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -844,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
