--- a/peakflo-local-testing-sandbox/firestore-testing.ipynb
+++ b/peakflo-local-testing-sandbox/firestore-testing.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1727856238.202165\n"
+      "1728281808.6883025\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "<firebase_admin.App at 0x17bc54e6e40>"
+       "<firebase_admin.App at 0x1b592ee04a0>"
       ]
      },
      "execution_count": 4,
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,19 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "update_time {\n",
-       "  seconds: 1725797609\n",
-       "  nanos: 192093000\n",
+       "  seconds: 1728281824\n",
+       "  nanos: 143998000\n",
        "}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,20 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted ER with number: ER-1727960877.5815334-001\n"
+      "Inserted bill with number: BILL-1728284910.788857-001\n"
      ]
     }
    ],
    "source": [
     "# insert_bills_to_firestore(1)\n",
-    "insert_er_to_firestore(1)"
+    "insert_bills_to_firestore(1)"
    ]
   },
   {
@@ -1020,7 +1020,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
