final exam question 3 done

--- a/PGD-DS-AI-2024/PGD_ML/final-exam/final-exam.ipynb
+++ b/PGD-DS-AI-2024/PGD_ML/final-exam/final-exam.ipynb
@@ -2267,6 +2267,87 @@
     "print(\"\\nFeature Importance:\")\n",
     "print(feature_importance)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# COVID-19 Diagnosis Test Analysis\n",
+    "\n",
+    "## Problem Statement\n",
+    "Data: Through the diagnosis test I predicted 100 report as COVID positive, but only 45 of those were actually positive. Total 50 people in my sample were actually COVID positive. I have total 500 samples.\n",
+    "\n",
+    "Create confusion matrix based on given data mathematically and find:\n",
+    "1. Accuracy\n",
+    "2. Precision\n",
+    "3. Recall\n",
+    "4. F-1 score\n",
+    "\n",
+    "## Given Information\n",
+    "* Total predictions of positive cases: 100\n",
+    "* True positives (TP): 45\n",
+    "* Total actual positive cases: 50\n",
+    "* Total samples: 500\n",
+    "\n",
+    "## Required Calculations\n",
+    "* Accuracy = (TP + TN) / Total samples\n",
+    "* Precision = TP / (TP + FP)\n",
+    "* Recall = TP / (TP + FN)\n",
+    "* F1 Score = 2 × (Precision × Recall) / (Precision + Recall)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solution for COVID-19 Diagnosis Test Analysis\n",
+    "\n",
+    "## Step 1: Creating the Confusion Matrix\n",
+    "From the given information:\n",
+    "- True Positives (TP) = 45\n",
+    "- False Positives (FP) = 100 - 45 = 55 (predicted positive but actually negative)\n",
+    "- False Negatives (FN) = 50 - 45 = 5 (actual positives missed by prediction)\n",
+    "- True Negatives (TN) = 500 - (TP + FP + FN) = 500 - (45 + 55 + 5) = 395\n",
+    "\n",
+    "Confusion Matrix:\n",
+    "|               | Predicted Positive | Predicted Negative |\n",
+    "|---------------|-------------------|-------------------|\n",
+    "| Actually Positive | TP = 45 | FN = 5 |\n",
+    "| Actually Negative | FP = 55 | TN = 395 |\n",
+    "\n",
+    "## Step 2: Calculating Metrics\n",
+    "\n",
+    "### 1. Accuracy\n",
+    "- Formula: (TP + TN) / Total samples\n",
+    "- Calculation: (45 + 395) / 500\n",
+    "- Accuracy = 0.88 or 88%\n",
+    "\n",
+    "### 2. Precision\n",
+    "- Formula: TP / (TP + FP)\n",
+    "- Calculation: 45 / (45 + 55)\n",
+    "- Precision = 0.45 or 45%\n",
+    "\n",
+    "### 3. Recall (Sensitivity)\n",
+    "- Formula: TP / (TP + FN)\n",
+    "- Calculation: 45 / (45 + 5)\n",
+    "- Recall = 0.90 or 90%\n",
+    "\n",
+    "### 4. F1-Score\n",
+    "- Formula: 2 × (Precision × Recall) / (Precision + Recall)\n",
+    "- Calculation: 2 × (0.45 × 0.90) / (0.45 + 0.90)\n",
+    "- F1-Score = 0.60 or 60%\n",
+    "\n",
+    "## Interpretation\n",
+    "- The model has high accuracy (88%) due to the large number of true negatives\n",
+    "- Low precision (45%) indicates high false positive rate\n",
+    "- High recall (90%) shows the model is good at identifying actual positive cases\n",
+    "- F1-score (60%) balances precision and recall, indicating moderate overall performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
