final exam question 5 done

--- a/PGD-DS-AI-2024/PGD_ML/final-exam/final-exam.ipynb
+++ b/PGD-DS-AI-2024/PGD_ML/final-exam/final-exam.ipynb
@@ -3241,6 +3241,67 @@
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discussion of Machine Learning Concepts\n",
+    "\n",
+    "## 1. Overfitting\n",
+    "Overfitting occurs when a machine learning model learns the training data too well, including noise and outliers. This results in:\n",
+    "- Excellent performance on training data\n",
+    "- Poor performance on new, unseen data\n",
+    "- High variance, low bias\n",
+    "- Model captures random fluctuations in training data\n",
+    "\n",
+    "Common solutions:\n",
+    "- Cross-validation\n",
+    "- Regularization\n",
+    "- Reducing model complexity\n",
+    "- More training data\n",
+    "- Feature selection\n",
+    "\n",
+    "## 2. Underfitting\n",
+    "Underfitting happens when a model is too simple to capture the underlying patterns in the data. Characteristics include:\n",
+    "- Poor performance on both training and test data\n",
+    "- High bias, low variance\n",
+    "- Model fails to capture important relationships\n",
+    "- Oversimplified representation of the data\n",
+    "\n",
+    "Solutions:\n",
+    "- Increase model complexity\n",
+    "- Add more relevant features\n",
+    "- Reduce regularization\n",
+    "- Train longer\n",
+    "- Try more sophisticated algorithms\n",
+    "\n",
+    "## 3. Best Fit\n",
+    "Best fit represents the optimal balance between underfitting and overfitting. It is characterized by:\n",
+    "- Good generalization to unseen data\n",
+    "- Balanced bias-variance tradeoff\n",
+    "- Captures true underlying patterns\n",
+    "- Reasonable performance on both training and test sets\n",
+    "\n",
+    "Achieved through:\n",
+    "- Proper model selection\n",
+    "- Appropriate feature engineering\n",
+    "- Effective hyperparameter tuning\n",
+    "- Regular validation checks\n",
+    "\n",
+    "## 4. Bias\n",
+    "Bias represents the error introduced by approximating a real-world problem with a simplified model. Key aspects:\n",
+    "- High bias indicates underfitting\n",
+    "- Represents model assumptions\n",
+    "- Measures how far model predictions are from true values\n",
+    "- Systematic error in model predictions\n",
+    "\n",
+    "Impact:\n",
+    "- Affects model accuracy\n",
+    "- Influences model generalization\n",
+    "- Can lead to consistent errors\n",
+    "- May indicate need for more complex models"
+   ]
   }
  ],
  "metadata": {
